# meow-chat

./: .dockerignore  .env  .env.example  .gitignore  =4.8.0  Dockerfile  README cat persona.md  README.md  STREAMING_TEST.md  analysis_result_20250125.csv  docker-compose.conda.yml  docker-compose.yml  environment.md  environment.yml  normalization_side_effects_analysis.md  pyproject.toml  requirements-dev.txt  requirements.txt  simple_unit_normalizer_limitations.md  start_jupyter.sh  unit_normalization_cleanup_report.md  unit_normalization_fix_report.md  unit_normalization_refactor_plan.md
.github/: copilot-instructions.md  git-commit-instructions.md
app/: Home.py  __init__.py
app/core/: deps.py
backend/: Dockerfile  Dockerfile.conda  README.md  environment.yml  requirements-ocr.txt  requirements.txt
backend/config/: logging.example.yml  mcp_servers.example.yml
backend/mcp_servers/: start_servers.sh  stop_servers.sh
config/: .env.example  README.md
data/vectors/: chroma.sqlite3  simple_store.json
doc/: lab_table_extraction_pipeline.md  paddleocr_320_options.md  paddleocr_result_structure.md
docs/: API_KEYS_SETUP.md  ARCHITECTURE.md  DOMAIN_NOTES.md  FUTURE_IDEAS.md  GCP_DEPLOY_CLOUD_RUN.md  LAB_ANALYSIS_PROFESSIONALIZATION.md  LLM_FRAMEWORK_GUIDE.md  OPERATIONS.md  PRACTICAL_MCP_ARCHITECTURE.md  QUICKSTART.md  REACT_MODE.md  README.md  RECOMMENDED_MCP_STRUCTURE.md  TECH_STACK.md  TEST_GUIDE.md  environment.md  jupyter-glibcxx-fix.ko.md  lab_table_extraction_pipeline.md  loadmap.md  pipeline_contract.ko.md  pipeline_contract.md  plan.md  plan2.md  practical-mcp-architecture.ko.md  response_latency_guide.md  작업계획.md
docs/presentations/: 검사결과_생성_플로우.md  기억_개인화_컨텍스트.md  생애주기_장기기억_설계.md  오케스트레이션.md
frontend/: Dockerfile  README.md  app.py
frontend/config/: defaults.py  loader.py  mcp_servers.docker.yml  mcp_servers.yml
frontend/services/: agent_runner.py  context_builder.py  langgraph_compat.py  orchestrator.py  streaming.py  summarizer.py
frontend/ui/: styles.py
mcp_servers/: start_servers.sh  stop_servers.sh
mcp_servers/health_analysis/: cat_health_server.py
mcp_servers/ocr/: ocr_api_server.py
mcp_servers/utility/: math_utility_server.py
mcp_servers/weather/: weather_api_server.py
meow-chat/: pytest.ini
meow-chat/tests/: conftest.py  test_ocr_paddle.py
notebooks/: README.md
notebooks/ocr/: GPT-4V_test.ipynb  blood_analyzer_test.ipynb  easyocr_test.ipynb  gpt-4o_test.ipynb  img2table_test.ipynb  ocr_vs_multimodal_comparison.ipynb  paddleOCR.ipynb  paddleocr_and_llm_test_prompt.ipynb  paddleocr_multi_test2.ipynb  paddleocr_test.ipynb  paddleocr_test2.ipynb  paddleocr_test3.ipynb  table-transformer_test.ipynb  test_google_vision.ipynb
outputs/: 20241121_0.png.txt
scripts/: activate.sh  activate_env.sh  check_openai_model.py  force_save_and_check_memory.py  run_app.sh  run_app_dummy.sh  run_frontend.sh  start_jupyter.sh  test_memory_flow.py
src/: __init__.py  parse_PaddleOCR.ipynb  parse_PaddleOCR_2.ipynb  parse_Tesseract_LayoutParser.ipynb  settings.py
src/models/: __init__.py  envelopes.py
src/prompts/: README.md  __init__.py  chat.py  header_inference.py  intent_classification.py  lab_analysis.py  metadata_extraction.py
src/utils/: images.py  pdf.py
test/: image_preprocessing.py  parse_GPT-4V_2.ipynb  parse_Tesseract_LayoutParser.ipynb
test/debug_output/: best_extracted_text_20241107.txt  best_extracted_text_image.txt
tests/: conftest.py  streamlit_camera_demo.py  test_assessment.py  test_chat.py  test_code_lexicon.py  test_easy_ocr.py  test_envelopes.py  test_image_preprocessor.py  test_lab_table_extractor.py  test_lab_validation.py  test_line_preprocessor.py  test_llm.py  test_llm_metadata_fallback.py  test_ocr.py  test_ocr_factory.py  test_ocr_real.py  test_orchestration.py  test_reference_data.py  test_unit_lexicon.py  test_unit_normalizer.py  test_utils.py
tests/fixtures/: __init__.py
tests/integration/: parse_GPT-4V.ipynb  parse_GPT-4V_3.ipynb  (+2 more)
(+159 files in other folders)
